extends Node2D


onready var player_death_sound = $PlayerDeathSound
onready var player_fire_sound = $PlayerFireSound
onready var player_fire_sound2 = $PlayerFireSound2
onready var player_roll_sound = $PlayerRollSound
onready var enemy_die_sound = $EnemyDieSound
onready var enemies_cleared_sound = $EnemiesClearedSound
onready var enemy_hit_sound = $EnemyHit
onready var enemy_hit_sound2 = $EnemyHit2
onready var player_hit = $PlayerHit
